[project]
name = "secure-incident-api-lab"
version = "0.1.0"
description = "Production-pattern FastAPI backend lab for defensive incident management."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.110",
  "alembic>=1.13",
  "bcrypt<5",
  "email-validator>=2.0",
  "passlib[bcrypt]>=1.7",
  "pydantic-settings>=2.0",
  "python-jose[cryptography]>=3.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "docs*", "tests*"]

[tool.setuptools.package-data]
"app.auth" = ["common_passwords.txt"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "S",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
